--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ pytest = "^5.2"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
-smallangle = "smallangle.smallangle:cmdgroup"
+smallangle = "smallangle.smallangle:cmd_group"
